modified:   server/print_really/requirements.txt modified:   server/print_really/templates/upload.html

--- a/server/print_really/templates/upload.html
+++ b/server/print_really/templates/upload.html
@@ -95,8 +95,9 @@
                             
                             <!-- 选择文件 -->
                             <div>
+                                
                                 <a href="javascript:;" class="mdui-btn mdui-btn-raised">
-                                    <input type="file" name="file" id="upl" />-选择文件-
+                                    <input type="file" class="mdui-btn mdui-btn-raised" />
                                 </a>
                             </div>
 
