fixed some bug & BW support

--- a/server/print_really/templates/upload.html
+++ b/server/print_really/templates/upload.html
@@ -102,9 +102,17 @@
                         <div>
 
                             <a href="javascript:;" class="mdui-btn mdui-btn-raised">
-                                <input type="file" class="mdui-btn mdui-btn-raised" />
+                                <input type="file" name="file" class="mdui-btn mdui-btn-raised" />
                             </a>
                         </div>
+
+                        <div class="mdui-col">
+                            <label class="mdui-checkbox">
+                                <input type="checkbox" id="bw" name="bw">
+                                <i class="mdui-checkbox-icon"></i>
+                                黑白
+                            </label>
+                          </div>
 
                         <!-- 这里是进度条 -->
                         <div id="dayi_process_1"></div> <!--进度条呜呜呜呜，我整了好久先整个整个qwq-->
