--- a/server/print_really/templates/upload.html
+++ b/server/print_really/templates/upload.html
@@ -7,9 +7,15 @@
     <meta name="renderer" content="webkit">
     <meta name="force-rendering" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Woodpecker 打印站</title>
+    <title>兔子云印</title>
+
+    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css"
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
+
+    <!-- 新的UI框架 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
 </head>
 
 <body class="mdui-theme-primary-pink mdui-theme-accent-pink mdui-bottom-nav-fixed">
@@ -20,170 +26,167 @@
     </div>
 
     <div class="mdui-container">
-        <div class="mdui-tab" mdui-tab>
-            <a href="#example6-tab1" class="mdui-ripple">
-                <i class="mdui-icon material-icons">phone</i>
-                <label>recents</label>
+        <div class="mdui-textfield">
+            <form id="myForm" action="./uploader" method="POST" enctype="multipart/form-data">
+                <!-- 文件选择框 -->
+                <div>
+                  <label>
+                    选择文件：
+                    <input id="fileInput" name="file" type="file" required>
+                  </label>
+                </div>
+              
+                <!-- 黑白打印选项 -->
+                    <label>
+                        <input type="checkbox" name="blackAndWhitePrinting">
+                        <span class="checkable">黑白打印</span>
+                        
+                      </label>
+              
+                <!-- 删除文件选项 -->
+                <div>
+                  <label>
+                    <input id="deleteAfterPrinting" name="deleteAfterPrinting" type="checkbox">
+                    <span class="checkable">打印完立即删除文件</span>
+                  </label>
+                </div>
+              
+                <!-- 打印全部页码选项 -->
+                <div>
+                  <label>
+                    <input id="printAllPages" name="printAllPages" type="checkbox" checked>
+                    <span class="checkable">打印全部页码</span>
+                  </label>
+                </div>
+              
+                <!-- 自定义页码范围选项 -->
+                <div>
+                  <label>
+                    自定义页码范围：
+                    <input id="pageRange" name="pageRange" type="text" placeholder="例如：1-5,7,10-12">
+                  </label>
+                </div>
+              
+                <button type="submit">上传</button>
+              </form>
+
+        </div>
+    </div>
+    {{str_time|safe}}</h4>
+    <br>
+    </form>
+    </div>
+    
+    </div>
+
+    <div class="mdui-container">
+        <div class="mdui-textfield">
+        <div>
+            <a>
+                实时时间:
+                <div id="dayi-time"></div>
             </a>
-            <a href="#example6-tab2" class="mdui-ripple">
-                <i class="mdui-icon material-icons">favorite</i>
-                <label>favorites</label>
-            </a>
-            <a href="#example6-tab3" class="mdui-ripple">
-                <i class="mdui-icon material-icons">perm_contact_calendar</i>
-                <label>nearby</label>
-            </a>
+        </div>
         </div>
     </div>
 
-    <!-- 选择列 -->
-    <div class="mdui-container">
-        <div class="mdui-row-md-4">
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" />
-                    <i class="mdui-checkbox-icon"></i>
-                    默认不选中
-                </label>
-            </div>
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" checked />
-                    <i class="mdui-checkbox-icon"></i>
-                    默认选中
-                </label>
-            </div>
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" disabled />
-                    <i class="mdui-checkbox-icon"></i>
-                    禁用，且不选中
-                </label>
-            </div>
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" disabled checked />
-                    <i class="mdui-checkbox-icon"></i>
-                    禁用，且选中
-                </label>
-            </div>
+    <!-- 获得表单数据 -->
+<script>
+    //拦截提交跳转
+    const form = document.getElementById("myForm");
+    form.addEventListener("submit", submitForm);
+    
+
+    function submitForm() {
+        event.preventDefault();
+        const form = document.getElementById("myForm");
+        const formData = new FormData(form);
+
+        const jsonData = {};
+        for (const [key, value] of formData.entries()) {
+            jsonData[key] = value;
+        }
+
+        console.log(jsonData);
+
+        fetch("./submit-form", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify(jsonData)
+        }).then(response => {
+            if (!response.ok) {
+                throw new Error(response.statusText);
+            }
+            return response.json();
+        }).then(data => {
+            console.log(data);
+        }).catch(error => {
+            console.error(error);
+        });
+    }
+
+</script>
+
+
+    <div class="mdui-bottom-nav mdui-color-green-100">
+        <a href="" class="mdui-ripple mdui-bottom-nav-active">
+            <i class="mdui-icon material-icons">insert_emoticon</i>
+            <label>刷新</label>
+        </a>
+    </div>
+
+    <div class="mdui-dialog" id="message">
+        <div class="mdui-dialog-title" id="message_title">标题</div>
+        <div class="mdui-dialog-content" id="message_content">内容</div>
+        <div class="mdui-dialog-actions">
+            <button class="mdui-btn mdui-ripple" mdui-dialog-close>关闭</button>
         </div>
-        <div class="mdui-row-md-4">
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" id="indeterminate-demo1" />
-                    <i class="mdui-checkbox-icon"></i>
-                    不确定状态
-                </label>
-            </div>
+    </div>
 
-            <div class="mdui-col">
-                <label class="mdui-checkbox">
-                    <input type="checkbox" disabled id="indeterminate-demo2" />
-                    <i class="mdui-checkbox-icon"></i>
-                    禁用，且不确定状态
-                </label>
-            </div>
+    <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js"
+        integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
+        crossorigin="anonymous"></script>
 
-            <div class="mdui-container">
-                <div class="mdui-textfield">
-                    <h1>
-                        <div>兔子云印</div>
-                    </h1>
-                    <h2>
-                        <div>Rabbit Remote Print</div>
-                    </h2>
-                    <form action="./uploader" method="POST" enctype="multipart/form-data">
-                        <!--  -->
-                        <div><input class="mdui-textfield" type="text" name="filename" readonly="true"
-                                placeholder="当前支持超级多的格式啦" id="uplname" /></div>
+    <script>
+        $(document).ready(function () {
+            $("#upl").change(function () {
+                var selname = $(this).val();
+                var str = "fakepath";
+                var hhstr = "";
+                if (selname.indexOf(str) >= 0) {
+                    hhstr = selname.substring(12, selname.length);
+                    $("#uplname").val(hhstr);
+                } else {
+                    $("#uplname").val(selname);
+                }
+            });
+        });
 
-                        <!-- 选择文件 -->
-                        <div>
+        $('#dayi_submit').click(function () {
+            document.getElementById("dayi_process_1").innerHTML = "<div class=\"mdui-progress\"><div class=\"mdui-progress-indeterminate\"></div><br></div>";
+        });
 
-                            <a href="javascript:;" class="mdui-btn mdui-btn-raised">
-                                <input type="file" class="mdui-btn mdui-btn-raised" />
-                            </a>
-                        </div>
+        window.addEventListener('load', function () {
+            FastClick.attach(document.body);
+        }, false);
+    </script>
 
-                        <!-- 这里是进度条 -->
-                        <div id="dayi_process_1"></div> <!--进度条呜呜呜呜，我整了好久先整个整个qwq-->
-                        <div><a href="javascript:;" class="a-upload"><input type="submit" id="dayi_submit"
-                                    value="提交" />[点击打印]芜湖起飞↗✈️</a></div>
-                        <h4>当前支持更多格式啦 <br> ver.Beta 0.0029 <br>
-                            支持图片很多以及各种doc docx啥的owo<br><br>
-                            {{str_time|safe}}</h4>
-                        <br>
-                    </form>
-                </div>
+    <script>
+        const timeDiv = document.getElementById("dayi-time");
+        setInterval(() => {
+            fetch("./api-v2/time")
+                .then(response => response.json())
+                .then(data => {
+                    // console.log(data);
+                    const time = data.data[0];
+                    timeDiv.innerText = time;
+                })
+                .catch(error => console.error(error));
+        }, 1000);
 
-            </div>
-
-            <div>
-                <a>
-                    实时时间:
-                    <div id="dayi-time"></div>
-                </a>
-            </div>
-
-
-            <div class="mdui-bottom-nav mdui-color-green-100">
-                <a href="" class="mdui-ripple mdui-bottom-nav-active">
-                    <i class="mdui-icon material-icons">insert_emoticon</i>
-                    <label>刷新</label>
-                </a>
-            </div>
-
-            <div class="mdui-dialog" id="message">
-                <div class="mdui-dialog-title" id="message_title">标题</div>
-                <div class="mdui-dialog-content" id="message_content">内容</div>
-                <div class="mdui-dialog-actions">
-                    <button class="mdui-btn mdui-ripple" mdui-dialog-close>关闭</button>
-                </div>
-            </div>
-
-            <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js"
-                integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
-                crossorigin="anonymous"></script>
-
-            <script>
-                $(document).ready(function () {
-                    $("#upl").change(function () {
-                        var selname = $(this).val();
-                        var str = "fakepath";
-                        var hhstr = "";
-                        if (selname.indexOf(str) >= 0) {
-                            hhstr = selname.substring(12, selname.length);
-                            $("#uplname").val(hhstr);
-                        } else {
-                            $("#uplname").val(selname);
-                        }
-                    });
-                });
-
-                $('#dayi_submit').click(function () {
-                    document.getElementById("dayi_process_1").innerHTML = "<div class=\"mdui-progress\"><div class=\"mdui-progress-indeterminate\"></div><br></div>";
-                });
-
-                window.addEventListener('load', function () {
-                    FastClick.attach(document.body);
-                }, false);
-            </script>
-
-            <script>
-                const timeDiv = document.getElementById("dayi-time");
-                setInterval(() => {
-                    fetch("./api-v2/time")
-                        .then(response => response.json())
-                        .then(data => {
-                            // console.log(data);
-                            const time = data.data[0];
-                            timeDiv.innerText = time;
-                        })
-                        .catch(error => console.error(error));
-                }, 1000);
-
-            </script>
+    </script>
 
 </body>
 
